# DeCentral-Chronicle-SmartContract-Gear-Hackathon

./: .binpath  .metahash  Cargo.toml  Makefile  README.md  build.rs  de_central_chronicle.meta.txt
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  lib.rs
state/: Cargo.toml
state/src/: lib.rs
