[package]
name = "chronicles-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gmeta = {  git = "https://github.com/gear-tech/gear.git", features = ["codegen"], rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
chronicles-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm", "wasm-opt"] , rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }